[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/MissileV2.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/GUIs/GameOver_Menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Crates/Crate_Receiver.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Drone.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Crates/Crate.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Crates/Crate_Dispatcher.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/Managers/Missile_Manager.gd" type="Script" id=7]
[ext_resource path="res://scripts/GameManager.gd" type="Script" id=8]
[ext_resource path="res://scripts/Managers/Receivers_Manager.gd" type="Script" id=9]
[ext_resource path="res://sprites/icon.png" type="Texture" id=10]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 1038.26, 145.552, 1044.99, 123.103, 1108.34, -34.5271, 1113.39, 604.554, 1031.52, 257.798, 1031.52, 235.349, 1027.03, 473.311, 1027.03, 450.862, 1027.03, 343.105, 1024.79, 363.31, 1039.37, 28.0045, 1024.79, 565.353, -159.728, -41.2543, 703.352, 24.229, 286.486, 58.1903, 649.887, 96.1638, 170.67, 59.9721, 306.413, 316.166, 306.413, 408.208, 301.923, 430.658, 272.232, 384.259, 270.45, 361.096, 627.842, 532.033, 692.026, 467.85, 695.801, 566.013, 620.703, 603.517, 694.785, 118.613, 645.397, 192.696, 333.352, 93.9189, 326.618, 190.451, 627.437, 408.208, 637.281, 316.83, 703.765, 251.064, 699.275, 340.861, 697.03, 356.575, 703.765, 136.572, 641.056, 209.228, 699.275, 228.614, 636.417, 298.207, 329.578, 207.341, 313.148, 295.962, 618.458, 515.965, 625.193, 428.413, 697.03, 446.372, 172.451, 275.57, 15.6533, 270.224, -163.091, 607.918, 6.74426, 353.969, 15.6533, 384.259, 15.6533, 459.095, 305.037, 530.146, 304.168, 509.23, 168.888, 462.658, 165.324, 590.948, 270.45, 589.166, 319.883, 605.761 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5 ), PoolIntArray( 3, 6, 7, 4 ), PoolIntArray( 8, 4, 7 ), PoolIntArray( 8, 7, 9 ), PoolIntArray( 2, 1, 10 ), PoolIntArray( 11, 6, 3 ), PoolIntArray( 12, 2, 10, 13 ), PoolIntArray( 14, 12, 13, 15 ), PoolIntArray( 12, 14, 16 ), PoolIntArray( 17, 18, 19, 20, 21 ), PoolIntArray( 22, 23, 24, 25 ), PoolIntArray( 26, 27, 15, 13 ), PoolIntArray( 14, 15, 28 ), PoolIntArray( 21, 14, 28, 29 ), PoolIntArray( 30, 31, 32, 33, 34 ), PoolIntArray( 26, 1, 0, 35 ), PoolIntArray( 36, 27, 26, 35, 37, 38 ), PoolIntArray( 29, 27, 36, 39 ), PoolIntArray( 21, 29, 39, 40, 17 ), PoolIntArray( 41, 42, 30, 34, 43, 23, 22 ), PoolIntArray( 33, 8, 9, 34 ), PoolIntArray( 18, 30, 42, 19 ), PoolIntArray( 16, 44, 45, 12 ), PoolIntArray( 46, 12, 45, 47 ), PoolIntArray( 5, 4, 32, 37 ), PoolIntArray( 38, 37, 32, 31 ), PoolIntArray( 38, 31, 17, 40 ), PoolIntArray( 21, 20, 48, 47 ), PoolIntArray( 46, 47, 48, 49 ), PoolIntArray( 7, 6, 23, 43 ), PoolIntArray( 41, 22, 50, 51 ), PoolIntArray( 49, 52, 53, 46 ), PoolIntArray( 54, 20, 19, 51 ), PoolIntArray( 54, 51, 50 ), PoolIntArray( 54, 50, 55 ), PoolIntArray( 25, 24, 11, 3 ), PoolIntArray( 53, 54, 55, 46 ), PoolIntArray( 3, 46, 55 ), PoolIntArray( 3, 55, 25 ) ]
outlines = [ PoolVector2Array( -159.728, -41.2543, 1108.34, -34.5271, 1113.39, 604.554, -163.091, 607.918 ), PoolVector2Array( 333.352, 93.9189, 326.618, 190.451, 645.397, 192.696, 649.887, 96.1638 ), PoolVector2Array( 703.352, 24.229, 694.785, 118.613, 1044.99, 123.103, 1039.37, 28.0045 ), PoolVector2Array( 703.765, 136.572, 699.275, 228.614, 1031.52, 235.349, 1038.26, 145.552 ), PoolVector2Array( 703.765, 251.064, 699.275, 340.861, 1027.03, 343.105, 1031.52, 257.798 ), PoolVector2Array( 697.03, 356.575, 697.03, 446.372, 1027.03, 450.862, 1024.79, 363.31 ), PoolVector2Array( 692.026, 467.85, 695.801, 566.013, 1024.79, 565.353, 1027.03, 473.311 ), PoolVector2Array( 319.883, 605.761, 305.037, 530.146, 627.842, 532.033, 620.703, 603.517 ), PoolVector2Array( 301.923, 430.658, 304.168, 509.23, 618.458, 515.965, 625.193, 428.413 ), PoolVector2Array( 306.413, 408.208, 306.413, 316.166, 637.281, 316.83, 627.437, 408.208 ), PoolVector2Array( 313.148, 295.962, 329.578, 207.341, 641.056, 209.228, 636.417, 298.207 ), PoolVector2Array( 286.486, 58.1903, 170.67, 59.9721, 172.451, 275.57, 15.6533, 270.224, 6.74426, 353.969, 270.45, 361.096 ), PoolVector2Array( 15.6533, 384.259, 15.6533, 459.095, 168.888, 462.658, 165.324, 590.948, 270.45, 589.166, 272.232, 384.259 ) ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.7583, 30.6018 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 33.4025, 32.1581 )

[node name="Node2D" type="Node2D"]

[node name="Game_Manager" type="Node" parent="."]
script = ExtResource( 8 )
missile_manager_path = NodePath("../Missile_Manager")
gameover_menu_path = NodePath("../CanvasLayer/GameOver_Menu")

[node name="GameOver_Timer" type="Timer" parent="Game_Manager"]
wait_time = 3.0
one_shot = true

[node name="StartGame_Timer" type="Timer" parent="Game_Manager"]
one_shot = true

[node name="Missile_Manager" type="Node" parent="."]
script = ExtResource( 7 )
missile_scn = ExtResource( 1 )
navigation_path = NodePath("../Navigation2D")
drone_path = NodePath("../Drone")

[node name="Origin" type="Node2D" parent="Missile_Manager"]
position = Vector2( 80, 122 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
navpoly = SubResource( 1 )

[node name="Receiver_Manager" type="Node" parent="."]
script = ExtResource( 9 )
crate_receiver_scn = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="Receiver_Manager"]
position = Vector2( 478.877, 201.298 )

[node name="Area2D2" type="Area2D" parent="Receiver_Manager"]
position = Vector2( 472.521, 322.077 )

[node name="Crate_Dispatcher" parent="." instance=ExtResource( 6 )]
position = Vector2( 99.5895, 557.278 )
crate_scn = ExtResource( 5 )
receiver_manager_path = NodePath("../Receiver_Manager")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="GameOver_Menu" parent="CanvasLayer" instance=ExtResource( 2 )]
visible = false

[node name="MapStufs" type="Node" parent="."]

[node name="Area2D11" type="Area2D" parent="MapStufs"]
position = Vector2( 225.336, 208.623 )
scale = Vector2( 0.689384, 4.1002 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapStufs/Area2D11"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="MapStufs/Area2D11"]
texture = ExtResource( 10 )

[node name="Area2D12" type="Area2D" parent="MapStufs"]
position = Vector2( 125.555, 315.531 )
scale = Vector2( 2.8878, 0.511922 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapStufs/Area2D12"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="MapStufs/Area2D12"]
texture = ExtResource( 10 )

[node name="Area2D13" type="Area2D" parent="MapStufs"]
position = Vector2( 216.357, 484.749 )
scale = Vector2( 0.46481, 2.51283 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapStufs/Area2D13"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="MapStufs/Area2D13"]
texture = ExtResource( 10 )

[node name="Area2D14" type="Area2D" parent="MapStufs"]
position = Vector2( 125.555, 421.043 )
scale = Vector2( 2.8878, 0.511922 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapStufs/Area2D14"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="MapStufs/Area2D14"]
texture = ExtResource( 10 )

[node name="PlaceHolderWall" type="StaticBody2D" parent="MapStufs"]
position = Vector2( 856.53, 518.353 )
scale = Vector2( 4.25843, 0.719434 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapStufs/PlaceHolderWall"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="MapStufs/PlaceHolderWall"]
texture = ExtResource( 10 )

[node name="PlaceHolderWall2" type="StaticBody2D" parent="MapStufs"]
position = Vector2( 855.195, 406.227 )
scale = Vector2( 4.25843, 0.719434 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapStufs/PlaceHolderWall2"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="MapStufs/PlaceHolderWall2"]
texture = ExtResource( 10 )

[node name="PlaceHolderWall3" type="StaticBody2D" parent="MapStufs"]
position = Vector2( 858.191, 295.352 )
scale = Vector2( 4.25843, 0.719434 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapStufs/PlaceHolderWall3"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="MapStufs/PlaceHolderWall3"]
texture = ExtResource( 10 )

[node name="PlaceHolderWall4" type="StaticBody2D" parent="MapStufs"]
position = Vector2( 862.687, 187.474 )
scale = Vector2( 4.25843, 0.719434 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapStufs/PlaceHolderWall4"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="MapStufs/PlaceHolderWall4"]
texture = ExtResource( 10 )

[node name="PlaceHolderWall5" type="StaticBody2D" parent="MapStufs"]
position = Vector2( 867.181, 76.5989 )
scale = Vector2( 4.25843, 0.719434 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapStufs/PlaceHolderWall5"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="MapStufs/PlaceHolderWall5"]
texture = ExtResource( 10 )

[node name="PlaceHolderWall6" type="StaticBody2D" parent="MapStufs"]
position = Vector2( 467.53, 585.353 )
scale = Vector2( 4.25843, 0.719434 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapStufs/PlaceHolderWall6"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="MapStufs/PlaceHolderWall6"]
texture = ExtResource( 10 )

[node name="PlaceHolderWall7" type="StaticBody2D" parent="MapStufs"]
position = Vector2( 466.195, 473.227 )
scale = Vector2( 4.25843, 0.719434 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapStufs/PlaceHolderWall7"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="MapStufs/PlaceHolderWall7"]
texture = ExtResource( 10 )

[node name="PlaceHolderWall8" type="StaticBody2D" parent="MapStufs"]
position = Vector2( 469.191, 362.352 )
scale = Vector2( 4.25843, 0.719434 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapStufs/PlaceHolderWall8"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="MapStufs/PlaceHolderWall8"]
texture = ExtResource( 10 )

[node name="PlaceHolderWall9" type="StaticBody2D" parent="MapStufs"]
position = Vector2( 473.686, 254.474 )
scale = Vector2( 4.25843, 0.719434 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapStufs/PlaceHolderWall9"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="MapStufs/PlaceHolderWall9"]
texture = ExtResource( 10 )

[node name="PlaceHolderWall10" type="StaticBody2D" parent="MapStufs"]
position = Vector2( 478.181, 143.599 )
scale = Vector2( 4.25843, 0.719434 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapStufs/PlaceHolderWall10"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="MapStufs/PlaceHolderWall10"]
texture = ExtResource( 10 )

[node name="Drone" parent="." instance=ExtResource( 4 )]
position = Vector2( 657.163, 480.683 )
scale = Vector2( 0.28192, 0.297724 )
mov_speed = 200
rot_speed = 150
gamemanager_path = NodePath("../Game_Manager")

[connection signal="timeout" from="Game_Manager/GameOver_Timer" to="Game_Manager" method="_on_GameOver_Timer_timeout"]
[connection signal="timeout" from="Game_Manager/StartGame_Timer" to="Game_Manager" method="_on_StartGame_Timer_timeout"]
